[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ellar_jwt"


[project]
name = "ellar-jwt"
authors = [
   {name = "Ezeudoh Tochukwu", email = "tochukwu.ezeudoh@gmail.com"},
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
readme = "README.md"
home-page = "https://github.com/eadwinCode/ellar-jwt"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "ellar >= 0.5.8",
    "pyjwt>=1.7.1,<3",
    "pyjwt[crypto]"
]

crypto = [
    "cryptography>=3.3.1",
]

dev = [
    "pre-commit"
]

[project.urls]
Documentation = "https://github.com/eadwinCode/ellar-jwt"
Source = "https://github.com/eadwinCode/ellar-jwt"
Homepage = "https://eadwincode.github.io/ellar-jwt/"

[project.optional-dependencies]
test = [
    "pytest >= 7.1.3,<8.0.0",
    "pytest-cov >= 2.12.0,<5.0.0",
    "ruff ==0.1.7",
    "mypy == 1.7.1",
    "pytest-asyncio",
    "autoflake",
    "types-python-dateutil",
    "types-pytz"
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["ellar"]
